--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,12 +65,13 @@ jobs:
                     name: connect ssh and run
                     command: | 
                             ssh -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} \<< 'EOF'
+                                export JVM_OPTS=${JVM_OPTS}
                                 docker pull devs32/todolist-springboot:latest
                                 docker stop todolist-springboot || true
                                 docker rm todolist-springboot || true
                                 echo $JVM_OPTS
                                 docker run -d --name todolist-springboot -p 10001:8080 -e JVM_OPTS=${JVM_OPTS} devs32/todolist-springboot:latest
-                                /home/${SSH_USER}/script/springboot_check.sh
+                                /home/devs32/script/springboot_check.sh
                             EOF
 
 workflows:
