--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,8 +63,8 @@ jobs:
         steps:
             -   run:
                     name: connect ssh and run
-                    command: |
-                            ssh -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} "JVM_OPTS=${JVM_OPTS} bash -s" \<< 'EOF'
+                    command: ssh -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST}
+                        "JVM_OPTS=${JVM_OPTS} bash -s" \<< 'EOF'
                             docker pull devs32/todolist-springboot:latest
                             docker stop todolist-springboot || true
                             docker rm todolist-springboot || true
