--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,14 +63,13 @@ jobs:
         steps:
             -   run:
                     name: connect ssh and run
-                    command: ssh -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST}
-                        'JVM_OPTS="'${JVM_OPTS}'" bash -s' \<< 'EOF'
-                            docker pull devs32/todolist-springboot:latest
-                            docker stop todolist-springboot || true
-                            docker rm todolist-springboot || true
-                            docker run -d --name todolist-springboot -p 10001:8080 -e JVM_OPTS=$JVM_OPTS devs32/todolist-springboot:latest
-                            /home/devs32/script/springboot_check.sh
-                        EOF
+                    command: |
+                        ssh -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} "export JVM_OPTS='${JVM_OPTS}'; \
+                        docker pull devs32/todolist-springboot:latest; \
+                        docker stop todolist-springboot || true; \
+                        docker rm todolist-springboot || true; \
+                        docker run -d --name todolist-springboot -p 10001:8080 -e JVM_OPTS=\$JVM_OPTS devs32/todolist-springboot:latest; \
+                        /home/devs32/script/springboot_check.sh"
 
 workflows:
     develop-pipeline:
