--- a/todolist-web/src/main/resources/application.yaml
+++ b/todolist-web/src/main/resources/application.yaml
@@ -11,6 +11,15 @@ spring:
                 default_schema: public
                 format_sql: true
         defer-datasource-initialization: true
+    redis:
+        lettuce:
+            pool:
+                max-active: 5
+                max-idle: 5
+                min-idle: 2
+        host: redis-19009.c294.ap-northeast-1-2.ec2.redns.redis-cloud.com
+        port: 19009
+        password: ETEe2OyGEzldiMpplBWLnbcuH6j6sZ5Z
 jwt:
     issuer: todolist-springboot
     public-key: ${jwt.publicKey}
