--- a/todolist-web/Dockerfile
+++ b/todolist-web/Dockerfile
@@ -3,7 +3,7 @@ RUN mkdir "/app"
 COPY /build/libs/app.jar /app/app.jar
 
 # 스크립트 파일 복사 및 실행 권한 부여
-COPY health_check.sh /home/devs32/script/health_check.sh
+COPY ../script/health_check.sh /home/devs32/script/health_check.sh
 RUN chmod +x /home/devs32/script/health_check.sh
 
 EXPOSE 8080
