--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,9 +36,7 @@ jobs:
             IMAGE_NAME: devs32/todolist-springboot
         steps:
             - checkout
-            - sonarcloud/scan:
-                  context: sonarcloud
-                  scanner_parameters: -Dsonar.projectKey=Devs32_todolist-springboot
+            - sonarcloud/scan
             -   run:
                     name: gradle build
                     command: ./gradlew clean build
