--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ springDependencyManagementVersion = 1.1.4.RELEASE
 springCloudVersion = 2023.0.0
 springDocOpenApiVersion = 2.4.0
 
+jacocoVersion = 0.8.12
+
